# gaia

./: .gitignore  Dockerfile  LICENSE  README.md  agent.py  app.py  download_questions.py  environment.yml  langgraph.json  prompts.py  pyproject.toml  questions.json  requirements.txt
src/: llm_provider.py  nodes.py  workflow.py
src/tools/: audioTool.py  fetchFile.py  spreadsheetTool.py  webSearchTool.py  youtubeTranscriptTool.py
