[project]
name = "gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "debugpy>=1.8.15",
    "fastapi[standart]>=0.116.1",
    "gradio>=5.42.0",
    "ipython>=9.4.0",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.6",
    "langchain-tavily>=0.2.10",
    "langgraph>=0.5.4",
    "langgraph-api>=0.2.100",
    "langgraph-cli>=0.3.5",
    "openai-whisper>=20250625",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pytube>=15.0.0",
    "requests>=2.32.4",
    "starlette-session-middleware>=0.1.3",
    "tavily-python>=0.7.10",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.2.1",
]
